--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-plus": "^2.9.7",
     "mitt": "^3.0.1",
     "sass": "^1.86.3",
+    "scss": "^0.2.4",
     "scss-loader": "^0.0.1",
     "style-loader": "^4.0.0",
     "vue": "^3.5.13",
